// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generics: should compile class with type params 1`] = `
"[BREADCRUMBS]

# Class: ClassWithTypeParams<T, V\\\\>

[COMMENT]

## Type parameters

| Name | Description |
| :------ | :------ |
| \`T\` | [COMMENT] |
| \`V\` | [COMMENT] |

[TOC]

[GROUPS]
"
`;

exports[`Generics: should compile function with a simple type param' 1`] = `
"▸ \`Const\` **functionWithTypeParam**<\`A\`\\\\>(): \`boolean\`

[COMMENT]

#### Type parameters

| Name |
| :------ |
| \`A\` |

#### Returns

\`boolean\`

[SOURCES]
"
`;

exports[`Generics: should compile function with complex type params' 1`] = `
"▸ \`Const\` **functionWithTypeParams**<\`A\`, \`B\`, \`C\`\\\\>(): \`boolean\`

[COMMENT]

#### Type parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| \`A\` | extends [LINK]<\`string\`, \`number\`, \`A\`\\\\> | [COMMENT] |
| \`B\` | \`string\` \\\\| \`boolean\` | [COMMENT] |
| \`C\` | \`string\` | - |

#### Returns

\`boolean\`

[SOURCES]
"
`;

exports[`Generics: should compile type with nested generics' 1`] = `
"Ƭ **nestedGenerics**: [LINK]<[LINK]<[LINK]<\`string\`\\\\>\\\\>\\\\>

[COMMENT]

[SOURCES]
"
`;
